# metlin-filtering

./: README.md  pyproject.toml
data/output/: potentially_erroneous_list.txt
metlin_filtering/: __init__.py  data-analysis.py  datasets.py  models.py  preprocessing.py  training.py  utils.py
notebooks/: data-analysis.ipynb  models-summary.ipynb
