[tool.poetry]
name = "metlin-filtering"
version = "0.1.0"
description = ""
authors = ["Khrisanfov Mike <khrisanfovmike@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
rdkit = "^2024.3.5"
matplotlib = "^3.9.1.post1"
torch = {version = "^2.4.0", source = "pytorch"}
catboost = "^1.2.5"
torch-geometric = "^2.5.3"
tabulate = "^0.9.0"
xlsxwriter = "^3.2.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
torchinfo = "^1.8.0"
tensorboard = "^2.17.0"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
networkx = "^3.4.2"
graphviz = "^0.20.3"
torchviz = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"